--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   min-width: 320px;
+  min-height: 100vh; 
   padding-left: 12px;
   padding-right: 12px;
 }
